--- a/index.html
+++ b/index.html
@@ -18,17 +18,35 @@ body{
     font-family: Inter, sans-serif;
     color: black;
     margin: 10px;
-    background-color: #ffff;
+    background-color: #f9f9f9;
 }
+html {
+  scroll-behavior: smooth;
+}
+
+.avatar-text{
+    display: flex;
+    background-color: #ff6464;
+    color: white;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    font-weight: bolder;
+    font-size: 30px;
+    margin-left: 5px;
+}
+
 .navbar {
     display: flex;
     justify-content: end;
     font-size: 20px;
     font-weight: 600;
     gap: 15px;
-    margin: 0 12px;
+    margin: 0 80px;
     list-style: none;
-    margin-bottom: 60px;
+    margin-bottom: 20px;
 }
 .navbar a {
     text-decoration: none;
@@ -41,7 +59,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0px 87px;
+    margin: 8px 73px;
 }
 .text {
     display: flex;
@@ -50,7 +68,7 @@ body{
     padding: 0px 33px;
 }
 .text h1{
-    height: 115px;
+    height: 130px;
     font-size: 50px;
 }
 .text button {
@@ -63,18 +81,21 @@ body{
 .text button:hover{
   background-color: #d82f2f;
 }
-
+.end{
+      display: flex;
+     gap: 30px;
+}
 .work-process {
   display: flex;
-  gap: 35px;
+  gap: 20px;
   max-width: 100%;
   background-color: #f9f9f9;
-  margin: 11px 11px;
-    padding: 27px;
+  margin: 20px 0px;
+  padding: 100px;
 }
 
 .process-text {
-  max-width: 600px;
+  max-width:100%;
 }
 
 .process-text h2 {
@@ -83,10 +104,10 @@ body{
 }
 
 .process-text p {
-  font-size: 1rem;
-  color: #555;
+  font-size: 15px;
   line-height: 1.6;
-  margin-bottom: 1rem;
+  margin-bottom:22px;
+  color: #555;
 }
 
 .process-cards {
@@ -122,10 +143,11 @@ body{
 .icons{
     display: flex;
     justify-content: center;
-    margin: 28px;
-    padding: 15px;
+    margin: 15px 0px;
+    padding: 30px;
     flex-direction: column;
     text-align: center;
+    background-color: #d6d6d6;
 }
  .HUB {
     display: flex;
@@ -160,7 +182,7 @@ body{
   background-color: #f9f9f9;
   padding: 17px 48px;
   text-align: center;
-  margin: 5px;
+  margin: 15px 75px;
 }
 
 .cta-content h2 {
@@ -194,18 +216,23 @@ body{
    display: flex;
     margin-left: 33px;
     align-items: center;
-    gap: 135px;
+    gap: 115px;
     justify-content: center;
+}
+.skill {
+  background-color: #f9f9f9;
+    margin: 15px 75px;
 }
 .skill h1 {
   display: flex;
     justify-content: center;
-    font-size: 30px;
+    font-size: 35px;
     color: #FF6464;
+    padding:17px;
 }
 .skill-category h2 {
       display: flex;
-    margin: 24px 24px;
+    margin: 24px 75px;
     color: #d82f2f;
 }
 .FF {
@@ -226,11 +253,9 @@ body{
   font-size: 23px;
 }
 .contact-section {
-  padding: 60px 20px;
-  background-color: #fff;
-  border-radius: 10px;
-  max-width: 1200px;
-  margin: auto;
+  padding: 40px 20px;
+  background-color: #f9f9f9;
+  margin: 25px 75px;
 }
 
 .contact-container {
@@ -341,7 +366,7 @@ body{
   flex-direction: column;
   gap: 20px;
   background-color: #f9f9f9;
-  margin: 5px;
+  margin: 10px 74px;
   padding: 15px;
 }
 
@@ -401,7 +426,8 @@ color: #FF6464;
   text-align: center;
   background:#f9f9f9;
   font-family: 'Segoe UI', sans-serif;
-  padding: 5px;
+  padding: 15px;
+  margin: 20px 75px;
 }
 
 .blog-section h2 {
@@ -419,8 +445,8 @@ color: #FF6464;
 .blog-cards {
   display: flex;
   justify-content: center;
-  gap: 20px;
-  margin: 17px 145px;
+  gap: 48px;
+  margin: 15px 15px;
 }
 
 @media screen and (max-width: 600px) {
@@ -479,20 +505,28 @@ color: #FF6464;
   .work-process {
     flex-direction: column;
     gap: 20px;
-    margin: 15px;
-    padding: 15px;
+    margin: 0px;
+    padding: 25px;
+  }
+  .skill{
+    background-color: #f9f9f9;
+    margin: 5px;
   }
 
   .process-cards {
     flex-direction: column;
     gap: 15px;
   }
-
+  .project-cta{
+    background-color: #f9f9f9; 
+    text-align: center;
+    margin: 7px;
+  }
   .icons,
   .HUB {
     justify-content: center;
     gap: 10px;
-    margin-top: 5px;
+    margin: 5px;
     padding: 2px;
   }
 
@@ -513,7 +547,7 @@ color: #FF6464;
   }
 
   .cta-content h2 {
-    font-size: 22px;
+    font-size: 18px;
   }
 
   .cta-content p {
@@ -538,11 +572,29 @@ color: #FF6464;
   .row-inputs {
     flex-direction: column;
   }
-
+   .blog-section {
+    text-align: center;
+    background: #f9f9f9;
+    padding: 14px;
+    margin: 6px;
+   }
   .blog-cards {
     flex-direction: column;
     margin: 0 15px;
   }
+  .what-i-do .container {
+    display: flex;
+    flex-direction: column;
+    gap: 45px;
+    background-color: #f9f9f9;
+    margin: 0px;
+    padding: 11px;
+}
+.contact-section{
+  padding: 4px;
+  background-color: #f9f9f9;
+   margin: 7px;
+}
 }
 
 @media screen and (min-width: 600px) and (max-width: 1024px) {
@@ -550,7 +602,7 @@ color: #FF6464;
   .navbar {
     justify-content: end;
     font-size: 18px;
-    margin: 10px 20px 30px;
+    margin: 15px 30px;
   }
 
   .hero {
@@ -587,7 +639,8 @@ color: #FF6464;
   .icons,
   .HUB {
     gap: 20px;
-    padding: 10px;
+    padding: 6px;
+    margin:5px 12px;
   }
 
   .contact-container {
@@ -603,29 +656,82 @@ color: #FF6464;
     flex-direction: column;
     margin: 0 30px;
   }
+  .work-process {
+    display: flex;
+    gap: 20px;
+    max-width: 100%;
+    background-color: #f9f9f9;
+    margin: 9px;
+    padding: 15px;
+ }
+ .skill {
+    background-color: #f9f9f9;
+    margin: 22px 12px;
+ }
+ .project-cta {
+    background-color: #f9f9f9;
+    padding: 12px 15px;
+    text-align: center;
+    margin: 12px 11px;
+ }
+ .blog-section {
+  text-align: center;
+  background: #f9f9f9;
+  padding: 18px;
+  margin: 21px 12px;
+ }
+ .what-i-do .container{
+  display: flex;
+  flex-direction: column;
+  gap: 30PX;
+  background-color: #f9f9f9;
+  margin: 13px 12px;
+  padding: 20px;
+ }
+ .contact-section{
+  padding: 30px 11px;
+  background-color: #f9f9f9;
+  margin:20px 12px;
+ }
 }
 
   </style>
     <header class="header">
   <nav>
-  <button id="hamburger" aria-label="Toggle navigation">
-    <img src="image/hamburger-icons.png" alt="hamburger icon" class="img"/>
-    <span id="close-icon" style="display: none;">&times;</span>
-  </button>
+    <div class="logo">
+      <div class="avatar-text">S</div> 
+    </div>
+    <button id="hamburger" aria-label="Toggle navigation">
+      <img src="image/hamburger-icons.png" alt="hamburger icon" class="img"/>
+      <span id="close-icon" style="display: none;">&times;</span>
+    </button>
 
-  <div class="navbar" id="navbar">
-    <a href="#">Work</a>
-    <a href="#">Blog</a>
-    <a href="#">Contact</a>
-  </div>
-</nav>
-
-  </header>
+    <div class="navbar" id="navbar">
+      <a href="#work-process">Work</a>
+      <a href="#skill">Skill</a>
+      <a href="#blog">Blog</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </nav>
+</header>
     <section class="hero">
      <div class="text">
         <h1>Hii, I am Shaswat,<br>
          Cretive Technologist.</h1>
         <p>Front-end developer /UX-UI Designer.</p>
+        <br>
+        <div class="end">
+        <a href="https://github.com/Shaswat-01/" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24">
+         <path fill="#000" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2"></path> 
+        </svg>  
+        </a>
+        <a href="https://www.linkedin.com/in/shaswat-kumar-69308536a/" target="_blank">
+        <svg xmlsn="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 20 20">
+        <path fill="#000" d="M10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6s9.6-4.298 9.6-9.6S15.302.4 10 .4M7.65 13.979H5.706V7.723H7.65zm-.984-7.024c-.614 0-1.011-.435-1.011-.973c0-.549.409-.971 1.036-.971s1.011.422 1.023.971c0 .538-.396.973-1.048.973m8.084 7.024h-1.944v-3.467c0-.807-.282-1.355-.985-1.355c-.537 0-.856.371-.997.728c-.052.127-.065.307-.065.486v3.607H8.814v-4.26c0-.781-.025-1.434-.051-1.996h1.689l.089.869h.039c.256-.408.883-1.01 1.932-1.01c1.279 0 2.238.857 2.238 2.699z"></path>
+          </svg>
+        </a>
+        </div>
         <p>Hi, I’m Shashwat — A Creative Technologist turning ideas into interactive realities.I craft meaningful digital experiences at the intersection of design, code, and innovation. From responsive websites to dynamic interfaces, my work blends aesthetic vision with technical precision. Whether I’m prototyping a concept, writing clean front-end code, or exploring emerging tech, I approach every project with curiosity, creativity, and a builder’s mindset.Driven by design. Powered by code. Inspired by possibility.</p>
         <button href="#">Download Resume</button> 
        </div>
@@ -705,7 +811,7 @@ color: #FF6464;
        <h3 style="width: 130px; height: 52px; color: #ff6464;margin:0px 24px;" >REACT</h3>
       </div>
      </div>
-      <h2 style="color: #d82f2f;margin:10px 20px;">Learning :</h2>
+      <h2 style="color: #d82f2f;margin:10px 75px;">Learning :</h2>
       <div class="LL">
       <div class="LL-item">
       <img src="https://cdn.worldvectorlogo.com/logos/typescript.svg" alt="typescript" style="height: 100px;">
@@ -815,7 +921,7 @@ color: #FF6464;
           <div class="info-box">
             <div class="icon">📧</div>
             <div>
-              <p><strong>My Email:</strong><br><a href="mailto:Shaswatk289@mail.com">Shaswatk289@mail.com</a></p>
+              <p><strong>My Email:</strong><br><a href="mailto:Shaswatk289@mail.com">shaswatk289@gmail.com</a></p>
             </div>
           </div>
 
@@ -874,12 +980,18 @@ color: #FF6464;
 
   hamburger.addEventListener("click", () => {
     const isOpen = navbar.style.display === "block";
-
-    // Toggle visibility
     navbar.style.display = isOpen ? "none" : "block";
     closeIcon.style.display = isOpen ? "none" : "inline";
   });
+
+  document.querySelectorAll(".navbar a").forEach(link => {
+    link.addEventListener("click", () => {
+      navbar.style.display = "none";
+      closeIcon.style.display = "none";
+    });
+  });
 </script>
+
 
 </body>
 </html>
